fix: Node.js ESM support
* Add missing ESM support for Node.js (which doesn't recognize the package.json "module" field)
* Add ESM support to @emotion/server instead of relying on CommonJS interoperability

--- a/package.json
+++ b/package.json
@@ -134,7 +134,8 @@
     "globals": {
       "react": "React",
       "react/jsx-runtime": "ReactJSX",
-      "react/jsx-dev-runtime": "ReactJSXDev"
+      "react/jsx-dev-runtime": "ReactJSXDev",
+      "@emotion/react": "emotionReact"
     }
   },
   "bugs": {
